--- a/index.ipynb
+++ b/index.ipynb
@@ -42,18 +42,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "number_50 = 50\n",
     "less_than_50 = None\n",
     "if number_50 > 100:\n",
-    "    # if number_50 is greater than 100, assign the `less_than_50` variable to the number 100\n",
+    "    less_than_50 = 100 # if number_50 is greater than 100, assign the `less_than_50` variable to the number 100\n",
     "elif number_50 < 50:\n",
-    "    # if number_50 is greater than 50, assign the `less_than_50` variable to the number 50\n",
+    "    less_than_50 = 50 # if number_50 is greater than 50, assign the `less_than_50` variable to the number 50\n",
     "else:\n",
-    "    # else assign the `less_than_50` variable to 49"
+    "    less_than_50 = 49 # else assign the `less_than_50` variable to 49"
    ]
   },
   {
@@ -65,13 +65,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "temperature = 85\n",
     "is_it_hot = None\n",
-    "# conditionals go here"
+    "if temperature > 80:\n",
+    "    is_it_hot = (\"It is so hot out!\") # conditionals go here\n",
+    "else:\n",
+    "    is_it_hot = (\"This is nothing! Bring on the heat.\")"
    ]
   },
   {
@@ -84,13 +87,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "today_is = 4\n",
+    "today_is = 2\n",
     "day_of_the_week = None\n",
-    "# conditionals go here"
+    "if today_is == 2:\n",
+    "    day_of_the_week = \"Monday\"# conditionals go here"
    ]
   },
   {
@@ -102,14 +106,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "string = \"Python\"\n",
     "sub_string = \"on\"\n",
     "ends_with = None\n",
-    "# conditionals go here"
+    "if string.endswith(sub_string):\n",
+    "    sub_string = True # conditionals go here\n",
+    "else:\n",
+    "    sub_string = False\n"
    ]
   },
   {
@@ -143,7 +150,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
